--- a/manifest.json
+++ b/manifest.json
@@ -45,6 +45,11 @@
     },
     /* SDK配置 */
     "quickapp" : {},
+	"h5":{
+		"router":{
+			"base":"/h5/"
+		}
+	},
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
