--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
+    "js-base64": "^2.5.0",
     "mpvue-echarts": "^0.2.7"
   }
 }
