--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
-    "mpvue-echarts": "^0.2.7"
+    "mpvue-echarts": "^0.2.7",
+    "qrcodejs2": "0.0.2"
   }
 }
