撤单接口完善

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
     "mpvue-echarts": "^0.2.7",
-    "vue-qr": "^1.5.2"
+    "vue-qr": "^1.5.2",
+    "vuex-persistedstate": "^2.5.4"
   }
 }
