--- a/manifest.json
+++ b/manifest.json
@@ -48,8 +48,10 @@
 	"h5":{
 		"router":{
 			"mode" : "history",
-
+			// "publicPath":"./",
+      // "base" : "/storage/emulated/0/iOS/data/io.dcloud.HBuilder/apps/HBuilder/www/"
 			"base" : "/h5/"
+      
 
 		}
 	},
