--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 **/node_modules
 **/unpackage
+manifest.json
 # roadhog-api-doc ignore
 /src/utils/request-temp.js
 _roadhog-api-doc
