--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.14.1",
+    "echarts": "^4.2.0-rc.2",
     "vant": "^1.5.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
