--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.14.1",
     "echarts": "^4.2.0-rc.2",
+    "element-ui": "^2.5.2",
     "vant": "^1.5.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
@@ -25,6 +26,7 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
