--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "echarts": "^4.2.0-rc.2",
     "vant": "^1.5.5",
     "vue": "^2.5.2",
+    "vue-picker": "0.0.4",
+    "vue-pickers": "^1.1.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
     "vuex-persistedstate": "^2.5.4"
