--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-picker": "0.0.4",
     "vue-pickers": "^1.1.5",
+    "vue-qr": "^1.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
     "vuex-persistedstate": "^2.5.4"
