--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-scroll": "^1.14.1",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.5.2",
+    "lrz": "^4.9.40",
     "vant": "^1.5.5",
     "vue": "^2.5.2",
     "vue-qr": "^1.5.2",
